[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
include = "\\.pyi?$"
exclude = '''
/(
    \\.git
    \\.hg
    \\.mypy_cache
    \\.tox
    \\.venv
    _build
    buck-out
    build
    dist
    bin
)/
'''
