[metadata]
name = tree-combo-lr
version = 0.0.1
author = Lucas Ford
author_email = lcford185@gmail.com
description = Machine learning model that uses linear regression equations in the leaf nodes of a decision tree.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lcford2/rtree-lr-combo
project_urls = 
    Bug Tracker = https://github.com/lcford2/rtree-lr-combo/issues
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
python_requires = >= 3.6
install_requires = 
    numpy
    pandas
    scikit-learn
    scipy
    treelib

[options.packages.find]
where = src

[flake8]
max_line_length = 90
