[metadata]
name = py-plrt
version = 0.0.4
author = Lucas Ford
author_email = lcford185@gmail.com
description = Machine learning model that uses linear regression equations in the leaf nodes of a decision tree.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lcford2/py-plrt
project_urls =
    Bug Tracker = https://github.com/lcford2/py-plrt/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.6
install_requires =
    numpy
    pandas
    scikit-learn
    scipy

[options.packages.find]
where = src

[flake8]
max_line_length = 88
ignore = E402, W503, E203
